--- a/gradient_distence/cost.ipynb/costfunc.ipynb
+++ b/gradient_distence/cost.ipynb/costfunc.ipynb
@@ -239,9 +239,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "my_env",
    "language": "python",
-   "name": "python3"
+   "name": "my_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -253,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
