--- a/deeplearning/CNN/pretrained_cnns.ipynb
+++ b/deeplearning/CNN/pretrained_cnns.ipynb
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1082,7 @@
     "x = image.load_img('samples/arctic_fox_140.jpeg', target_size=(224, 224))\n",
     "x = image.img_to_array(x)\n",
     "x = np.expand_dims(x, axis=0)\n",
-    "x = preprocess_input(x) / 255"
+    "x = preprocess_input(x) "
    ]
   },
   {
