--- a/deeplearning/CNN/pretrained_cnns.ipynb
+++ b/deeplearning/CNN/pretrained_cnns.ipynb
@@ -1146,7 +1146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
